--- a/style.css
+++ b/style.css
@@ -179,19 +179,48 @@ h1 {
     border-radius: 20px;
     z-index: 9;
     background-color: #7b7b7b;
-    padding: 3em 3em;
+    padding: 2em 2em;
 }
 .form_container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1em;
 }
-  
+select {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+input {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+textarea {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
 .button_cancel {
     border: none;
     background-color: transparent;
     cursor: pointer;
-    color: #272531;
+    color: #303030;
+    font-size: 16px;
+    margin-left: 1em;
 }
 
 
@@ -360,7 +389,7 @@ h1 {
     opacity: 0.7;
     display: flex;
     flex-wrap: wrap;
-    gap: 1em;
+
     border-radius: 5px;
     padding: 10px;
 }
@@ -378,6 +407,10 @@ h1 {
     border-radius: 5px;
     font-size: 24px;
     font-weight: 500;
+}
+.main_buttons_service {
+    margin-left: 40%;
+    margin-top: 3em;
 }
 
 .page_howiwork {
@@ -445,9 +478,9 @@ img {
   position: relative;
   z-index: 2;
   padding: 10px;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Три колонки з однаковою шириною */
+    grid-gap: 20px; /* Проміжок між елементами */
   transition: all .5s ease-in-out;
   transform: translateZ(0);
 
@@ -578,11 +611,12 @@ img {
     margin-top: 5em;
     display: flex;
     flex-direction: column;
+    margin-bottom: 7em;
 }
 .subtitle_contacts {
     margin-top: 3em;
     font-weight: 300;
-    width: 40%;
+    width: 65%;
 }
 .contacts_section {
     width: 100%;
